Fixed badly located gh download button on small screens

--- a/docs/assets/css/override-style.css
+++ b/docs/assets/css/override-style.css
@@ -211,7 +211,7 @@ pre {
 .page-gh-download {
     display: inline;
     float: right;
-    margin-top: 12px;
+    margin-top: -56px;
 }
 
 /* post article contents */
